Fix styling and ditch submit button.
Stars now reflect rating better on hover state. Removed extra space and time zone in date. Segment.com analytics are now only enabled in production. Review is now submitted as soon as you select a rating.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -38,8 +38,7 @@ body
   max-width: 40rem
   margin: -6rem auto auto auto
 
-form.new_review,
-form.edit_review
+.review-form
   text-align: center
   position: relative
   top: 50%
@@ -62,7 +61,8 @@ form.edit_review
   input[type='radio']
     display: none
 
-    &:checked~label
+    &:checked~label,
+    &:hover~label
       @extend .fas
       color: gold
 
